# active-perception-experiments

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  package.xml  source_models.sh
config/: actions_manifest  camera_view.rviz  path.xml  perceptions_manifest  pos.xml  rescuer_perceptions_manifest  scout_perceptions_manifest  search_rescue.rviz  search_rescue_ap.rviz
description/: component_snippets.xacro  iris_camera_base.xacro
launch/: rescueworld.launch  scenario1.launch  scenario1_ap.launch  scenario2.launch  scenario2_ap.launch  scenario3.launch  scenario3_ap.launch  scout.launch  scout_px4.launch  search_rescue.launch  search_rescue_ap.launch  single_vehicle_spawn.launch  uav_ap.launch  uav_px4_sdf.launch
models/OpScrubs/: model.sdf
models/lifebuoy/: model.config  model.sdf
models/lifebuoy/meshes/: lifebuoy_.stl
models/rescue_randy/: model.config  model.sdf
models/rescue_randy/materials/scripts/: rescue_randy.material
params/: cob_people_object_detection_tensorflow_params.yaml  local_ips.yaml
scripts/: gradle_start_new_mas2j_ap.sh
src/ardupilot/uav_ap/: build.gradle  uav_ap.mas2j
src/ardupilot/uav_ap/src/asl/: rescuer.asl
src/camera_scenarios/rescuer_px4/: rescuer.asl
src/camera_scenarios/rescuer_px4_ap/: build.gradle
src/camera_scenarios/scout_px4/: scout.asl
src/gazebo_plugins/: camera_switch.cpp  lifebuoy.cpp  spawn_buoy.cpp  victim.cpp
src/rescuer_px4/: build.gradle  rescuer.asl  rescuer_px4.mas2j
src/rescuer_px4_ap/: build.gradle  rescuer.asl
src/scenario1/: mock_camera.py
src/scenario1/config/: rescuer_perceptions_manifest  scout_perceptions_manifest
src/scenario1/rescuer_px4/: rescuer.asl  rescuer_px4.mas2j
src/scenario1/rescuer_px4_ap/: build.gradle  rescuer.asl  rescuer2.masj
src/scenario1/scout_px4/: build.gradle  scout.asl  scout_px4.mas2j
src/scenario2/config/: rescuer_perceptions_manifest
src/scenario2/rescuer_px4/: build.gradle  rescuer.asl  rescuer1.masj
src/scenario2/rescuer_px4_ap/: rescuer.asl  rescuer1.masj
src/scenario2/scout_px4_ap/: build.gradle  scout.asl  scout.masj
src/scenario3/config/: actions_manifest  scout_perceptions_manifest
src/scenario3/rescuer_px4_ap/: rescuer.asl
src/scenario3/scout_px4/: scout.asl
src/scout/: scout.asl
src/scout_px4/: scout.asl
src/uav_ap/: build.gradle
uav_ap/: build.gradle  rescuer.asl  uav_ap.mas2j
uav_ap/src/asl/: rescuer.asl  sample_agent.asl
worlds/: rescue.world  rescue_drowning.world
