<?xml version="1.0"?>
<package format="2">
  <name>active-perception-experiments</name>
  <version>1.0.0</version>
  <description>Package with active perception experiments in Jason</description>

  <maintainer email="gustavorezendesilva@hotmail.com">Gustavo R. Silva</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/Rezenders/active-perception-experiments</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jason_ros</build_depend>
  <build_depend>jason_ros_msgs</build_depend>
  <build_export_depend>jason_ros</build_export_depend>
  <build_export_depend>jason_ros_msgs</build_export_depend>
  <exec_depend>jason_ros</exec_depend>
  <exec_depend>jason_ros_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>rqt_multiplot</exec_depend>
  <exec_depend>boustrophedon_msgs</exec_depend>
  <exec_depend>boustrophedon_server</exec_depend>
  <exec_depend>cob_people_object_detection_tensorflow</exec_depend>

  <export>
  </export>
</package>
